2003-11-07  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: optimized builds define NDEBUG to turn off
	ThreadAlloc range checking.

2003-11-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclEncoding.c (TclFindEncodings):	Normalize the path
	of the executable before passing to TclpInitLibraryPath() to avoid
	buggy handling of paths containing "..".  [Bug 832657]
	* tests/unixInit.test (unixInit-2.10): New test for fixed bug.

2003-11-04  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: added 'test' target.

2003-10-31  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclTest.c: fix test suite memory leak (backport error)
	* unix/tclUnixFile.c: ensure translated path (required for
	  correct error messages) is freed in both code paths.
	
2003-10-23  Andreas Kupries  <andreask@activestate.com>

	* unix/tclUnixChan.c (Tcl_MakeFileChannel): Applied [Patch 813606]
	  fixing [Bug 813087]. Detection of sockets was off for Mac OS X
	  which implements pipes as local sockets. The new code ensures
	  that only IP sockets are detected as such.

2003-10-22  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinSock.c (TcpWatchProc): Watch for FD_CLOSE too when
	  asked for writable events by the generic layer.
	  (SocketEventProc): Generate a writable event too when a close is
	  detected.

	  Together the changes fix [Bug 599468].

2003-10-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIOUtil.c (FsListMounts, FsAddMountsToGlobResult): New
	  functions. See below for context.
	  (Tcl_FSMatchInDirectory): Modified to call on the new functions
	  (above) to handle the mountpoints in the glob'bed directory
	  correctly. Part of the patch by Vincent Darley to solve the
	  [Bug 800106] for the 8.4.x series.

	* generic/tcl.h (TCL_GLOB_TYPE_MOUNT): New definition. Part of the
	  patch by Vincent Darley to solve [Bug 800106] for the 8.4.x series.

2003-10-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
